; ModuleID = '/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_skip_cb.c'
source_filename = "/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_skip_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive = type { i32 }
%struct.mp_archive_volume = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.archive*, i8*, i32)* @skip_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skip_cb(%struct.archive* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.archive*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.mp_archive_volume*, align 8
  %9 = alloca i32, align 4
  store %struct.archive* %0, %struct.archive** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.mp_archive_volume*
  store %struct.mp_archive_volume* %11, %struct.mp_archive_volume** %8, align 8
  %12 = load %struct.mp_archive_volume*, %struct.mp_archive_volume** %8, align 8
  %13 = call i32 @volume_seek(%struct.mp_archive_volume* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %32

16:                                               ; preds = %3
  %17 = load %struct.mp_archive_volume*, %struct.mp_archive_volume** %8, align 8
  %18 = getelementptr inbounds %struct.mp_archive_volume, %struct.mp_archive_volume* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @stream_tell(i32 %19)
  store i32 %20, i32* %9, align 4
  %21 = load %struct.mp_archive_volume*, %struct.mp_archive_volume** %8, align 8
  %22 = getelementptr inbounds %struct.mp_archive_volume, %struct.mp_archive_volume* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @stream_skip(i32 %23, i32 %24)
  %26 = load %struct.mp_archive_volume*, %struct.mp_archive_volume** %8, align 8
  %27 = getelementptr inbounds %struct.mp_archive_volume, %struct.mp_archive_volume* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @stream_tell(i32 %28)
  %30 = load i32, i32* %9, align 4
  %31 = sub nsw i32 %29, %30
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %16, %15
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @volume_seek(%struct.mp_archive_volume*) #1

declare dso_local i32 @stream_tell(i32) #1

declare dso_local i32 @stream_skip(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
